high-low performing schools

--- a/jupyter_practice.ipynb
+++ b/jupyter_practice.ipynb
@@ -6,6 +6,83 @@
    "id": "b89af3d0",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad03be54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59fd4432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_cat = Cat('Garfield')\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b273e982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "    \n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2279c808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(     first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfbe0d63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_dog = Dog('Lady', 'blonde', 'arf!')\n",
+    "print(     second_dog.name)\n",
+    "print(second_dog.color)\n",
+    "second_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7f8ef07",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
